<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <ScrollView
        android:id="@+id/register_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="800dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <!-- Enter Last name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">

                <AutoCompleteTextView
                    android:id="@+id/first_name_register"
                    android:inputType="textEmailAddress"
                    android:layout_width="600dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/textColor"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Enter First name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">

                <AutoCompleteTextView
                    android:id="@+id/last_name_register"
                    android:inputType="textEmailAddress"
                    android:layout_width="600dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/textColor"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- Enter email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">

                <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="600dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:hint="@string/prompt_email"
                    android:textColorHint="@color/textColor"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!--Enter Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="600dp"
                    android:layout_height="50dp"

                    android:gravity="center_horizontal|center_vertical"
                    android:autofillHints=""
                    android:hint="@string/prompt_password"
                    android:textColorHint="@color/TextColor"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/toLogin_register"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Register"
                android:textColor="@android:color/white"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold"
                android:background="@color/blueTeamColor"/>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>